# llm_zoomcamp

./: .gitignore  README.md  pyproject.toml
week_01/: README.md  homework.ipynb  rag.ipynb
week_02/: README.md  docker-compose.yaml  homework.ipynb  rag_gpu.ipynb  rag_local.ipynb
week_03/: evaluate_search_engine.ipynb  generate_ground_truth.ipynb  homework.ipynb
week_04/: README.md  homework.ipynb
week_04/app/: .env  app.py  assistant.py  db.py  docker-compose.yaml  generate_data.py  prep.py  requirements.txt
week_05/: README.md  homework.ipynb  notes.md
week_05/app/llm/rager/data_exporters/: clandestine_ignition.py  numinous_fission.py
week_05/app/llm/rager/data_loaders/: infinite_helix.py  luminous_empyrean.py  runic_oblivion.py
week_05/app/llm/rager/pipelines/sorcerous_eidolon/: metadata.yaml
week_05/app/llm/rager/transformers/: awe_inspiring_nucleus.py  ephemeral_apex.py  stellar_relic.py
week_05/scripts/: chunk.py  export.py  ingest.py  retrieve.py
workshop_dlt/: homework.ipynb
